# Llama-3.2-FT-From-Scratch-Alpaca

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
scripts/SFT/: llama_sft.py  llama_sft_lora.py  llama_sft_pipeline.py  llama_sft_pipeline_lora_3b.py
src/llmlib/: __init__.py
src/llmlib/Llama/: llama.py  preloaded_llama.py  rope_analysis.ipynb  tokenizers.py
src/llmlib/SFT/: pipeline.py  train.py
src/llmlib/utils/: eval.py  lr_schedulers.py  models.py  prompts.py  utils.py
