[project]
name = "llama3-2-ft"
version = "0.1.0"
description = "A project that implements Llama 3.2 from scratch and finetunes it on Alpca-style data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "prometheus-eval>=0.1.20",
    "safetensors>=0.5.2",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
