[project]
name = "Llama-3.2-FT-From-Scratch-Alpaca"
version = "0.1.0"
description = "A project that implements Llama 3.2 from scratch and finetunes it on Alpaca-style data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.45.1",
    "blobfile>=3.0.0",
    "clearml>=1.17.1",
    "huggingface-hub>=0.28.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "prometheus-eval>=0.1.20",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "vllm>=0.7.0",
]
